// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-bar can mount ActionBar 1`] = `
<div class="SharpActionBar">
	<div class="SharpActionBar__bar sticky-top">
		<div class="container">
			<div class="row align-items-center g-2">
				<div class="col SharpActionBar__col--left"></div>
				<div class="col-auto SharpActionBar__col--right"></div>
			</div>
		</div>
	</div>
	<!---->
</div>
`;

exports[`action-bar can mount with slots ActionBar 1`] = `
<div class="SharpActionBar">
	<div class="SharpActionBar__bar sticky-top">
		<div class="container">
			<div class="row align-items-center g-2">
				<div class="col SharpActionBar__col--left">
					<div>LEFT CONTENT</div>
				</div>
				<div class="col-auto SharpActionBar__col--right">
					<div>RIGHT CONTENT</div>
				</div>
			</div>
		</div>
	</div>
	<div class="">
		<div class="row">
			<div class="col">
				<div class="SharpActionBar__extras">
					<div>EXTRAS CONTENT</div>
				</div>
			</div>
			<!---->
		</div>
	</div>
</div>
`;
